# docs/swagger.json
@@ -1,17 +1,9 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Search-Engine-Rest_API. You can visit the GitHub repository at https://github.com/Anvesh965/Search-Engine",
+        "description": "Search-Engine-Rest-API. You can visit the GitHub repository at https://github.com/Anvesh965/Search-Engine",
         "title": "Search-Engine-API",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "MIT",
-            "url": "https://opensource.org/licenses/MIT"
-        },
+        "contact": {},
         "version": "2.0"
     },
     "host": "localhost:4000",
@@ -79,8 +71,8 @@
                             "$ref": "#/definitions/Controllers.Ranks"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/Controllers.Message"
                         }
@@ -122,8 +114,8 @@
                             "$ref": "#/definitions/Controllers.Message"
                         }
                     },
-                    "406": {
-                        "description": "Not Acceptable",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/Controllers.Message"
                         }
